1.5.1: Clean up code, fix consistency, record objects